tests/compile_fail/as_ref/struct_attr_empty.stderr
error: `#[as_ref(...)]` attribute can only be placed on structs with exactly one field
 --> tests/compile_fail/as_ref/struct_attr_empty.rs:3:1
  |
3 | struct Foo;
  | ^^^^^^
